# stats

./: .gitignore  404.html  CNAME  README.md  contestants.html  contestants.txt  contests.html  contests.txt  index.html  index.txt  manifest.webmanifest  regions.html  regions.txt  search.html  search.txt  tasks.html  tasks.txt
404/: index.html
about/: index.html
api/: api.raml  search  types.raml
backend/: .env.sample  Cargo.toml  README.md  Rocket.toml
backend/docker/: Dockerfile
backend/src/: cache.rs  cors.rs  db.rs  main.rs  schema.rs  types.rs  utility.rs
backend/src/controllers/: contest.rs  error.rs  health_check.rs  home.rs  mod.rs  region.rs  search.rs  task.rs  user.rs
backend/src/homepage/: contest.rs  mod.rs  region.rs  task.rs  user.rs
backend/src/models/: contest.rs  mod.rs  participation.rs  region.rs  task.rs  task_score.rs  user.rs
contest/: 2001.html  2001.txt  2002.html  2002.txt  2003.html  2003.txt  2004.html  2004.txt  2005.html  2005.txt  2006.html  2006.txt  2007.html  2007.txt  2008.html  2008.txt  2009.html  2009.txt  2010.html  2010.txt  2011.html  2011.txt  2012.html  2012.txt  2013.html  2013.txt  2014.html  2014.txt  2015.html  2015.txt  2016.html  2016.txt  2017.html  2017.txt  2018.html  2018.txt  2019.html  2019.txt  2020.html  2020.txt  (+8 more)
contestants/: index.html
contests/: index.html
contribute/: index.html
data/: contests.json  home.json  regions.json  search.json  tasks.json  users.json
frontend/: .eslintrc.json  .prettierrc  .yo-rc.json  README.md  biome.json  eslint.config.mjs  next.config.js  next.config.mjs  (+5 more)
(+4982 files in other folders)
