[package]
name = "oii-stats"
version = "0.1.0"
authors = ["Edoardo Morassutto <edoardo.morassutto@gmail.com>"]

[dependencies]
rocket = "0.3.14"
rocket_codegen = "0.3.14"
rocket_contrib = "0.3.14"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.3.2", features = ["sqlite", "r2d2"] }
dotenv = "0.9.0"
