[package]
name = "oii-stats"
version = "0.1.0"
authors = ["Edoardo Morassutto <edoardo.morassutto@gmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4"
rocket_codegen = "0.4"
rocket_contrib = "0.4"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
diesel = { version = "1.3", features = ["sqlite", "r2d2"] }
dotenv = "0.9"
itertools = "0.7"
num = "0.2"
lazy_static = "1.0"
